# pte-hangman

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  words.txt
lib/: categories.c  createmenuitem.c  initializer.c  playagame.c  renderHang.c  renderview.c  selectcategory.c  showcredits.c
lib/headers/: categories.h  createmenuitem.h  initializer.h  menuitem.h  playagame.h  renderHang.h  renderview.h  selectcategory.h  showcredits.h  showinstructions.h  storeanewword.h  word.h
lib/src/: categories.c  createmenuitem.c  initializer.c  main.c  playagame.c  renderHang.c  renderview.c  selectcategory.c  showcredits.c  showinstructions.c  storeanewword.c
lib/structs/: menuitem.h
